<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity" >
 
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:padding="6dip" >

            <ImageView
                android:id="@+id/icon1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/drink1"
                android:src="@drawable/shot" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"          
                android:layout_toRightOf="@+id/icon1"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/rule1"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:padding="6dip" >

            <ImageView
                android:id="@+id/icon2"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/drink1"
                android:src="@drawable/shot" />
            
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@+id/icon2"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/rule2"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:padding="6dip" >

            <ImageView
                android:id="@+id/icon3"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/drink1"
                android:src="@drawable/shot" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@+id/icon3"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/rule3"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:padding="6dip" >

            <ImageView
                android:id="@+id/icon4"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/drink1"
                android:src="@drawable/shot" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@+id/icon4"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/rule4"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:padding="6dip" >

            <ImageView
                android:id="@+id/icon5"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/drink1"
                android:src="@drawable/shot" />

           <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@+id/icon5"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/rule5"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:padding="6dip" >

            <ImageView
                android:id="@+id/icon6"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/drink1"
                android:src="@drawable/shot" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@+id/icon6"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/rule6"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:padding="6dip" >

            <ImageView
                android:id="@+id/icon7"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/drink1"
                android:src="@drawable/shot" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@+id/icon7"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/rule7"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:padding="6dip" >

            <ImageView
                android:id="@+id/icon8"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/drink1"
                android:src="@drawable/shot" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@+id/icon8"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/rule8"
                android:textSize="16sp" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:padding="6dip" >

            <ImageView
                android:id="@+id/icon9"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/drink1"
                android:src="@drawable/shot" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@+id/icon9"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/rule9"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:padding="6dip" >

            <ImageView
                android:id="@+id/icon10"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/drink1"
                android:src="@drawable/shot" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@+id/icon10"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/rule10"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:padding="6dip" >

            <ImageView
                android:id="@+id/icon11"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/drink1"
                android:src="@drawable/shot" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@+id/icon11"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/rule11"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:padding="6dip" >

            <ImageView
                android:id="@+id/icon12"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/drink1"
                android:src="@drawable/shot" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@+id/icon12"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/rule12"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:padding="6dip" >

            <ImageView
                android:id="@+id/icon13"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/drink1"
                android:src="@drawable/shot" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@+id/icon13"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/rule13"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:padding="6dip" >

            <ImageView
                android:id="@+id/icon14"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/finishDrink"
                android:src="@drawable/drink" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@+id/icon14"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/rule14"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:padding="6dip" >

            <ImageView
                android:id="@+id/icon15"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/finishDrink"
                android:src="@drawable/drink" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_toRightOf="@+id/icon15"
                android:gravity="center_vertical"
                android:padding="6dp"
                android:text="@string/rule15"
                android:textSize="16sp" />
        </RelativeLayout>
        
    </LinearLayout>

</ScrollView>